--- a/Intermediate_task/Intermediate task3/Task3.html
+++ b/Intermediate_task/Intermediate task3/Task3.html
@@ -141,7 +141,7 @@
       <!-- Close Button (X) -->
       <span class="close-btn" onclick="closeModal()">&times;</span>
       <h2>Modal Title</h2>
-      <p>This is a modal popup content.</p>
+      <p>This is a modal popup content. A modal popup is a user interface element that temporarily takes focus, requiring interaction before returning to the main content.</p>
     </div>
   </div>
 
